исправлена ошибка recyclerview. создане экранов

--- a/app/src/main/res/layout/fragment_theere_bicycle.xml
+++ b/app/src/main/res/layout/fragment_theere_bicycle.xml
@@ -687,7 +687,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:fontFamily="@font/freemonospaced"
-                    android:text="@string/experience"
+                    android:text="@string/opit"
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     android:textStyle="bold" />
