--- a/app/src/main/res/layout/fragment_too_bicycle.xml
+++ b/app/src/main/res/layout/fragment_too_bicycle.xml
@@ -646,7 +646,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/freemonospaced"
-                        android:text="@string/opit"
+                        android:text="@string/opit_polucen"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold" />
